# bazel-docker

./: MODULE.bazel  README.md  bazel-docker  is-docker-for-mac-still-broken-somehow.sh
